<!--MIT License-->
<!--  Copyright (c) 2019 Terrell Page-->
<!--    Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:-->
<!--  The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.-->
<!--  THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.-->
<resources>
  <string name="app_name">Budget Backwards</string>
  <string name="title_item_detail">Item Detail</string>
  <string name="title_activity_settings">Settings</string>

  <!-- Strings related to Settings -->

  <!-- Example General settings -->
  <string name="pref_header_general">General</string>
  <string name="pref_previously_started">done</string>

  <string name="pref_title_social_recommendations">Enable social recommendations</string>
  <string name="pref_description_social_recommendations">Recommendations for people to contact based
    on your message history
  </string>

  <string name="pref_title_display_name">Display name</string>
  <string name="pref_default_display_name">John Smith</string>

  <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
  <string name="pref_header_data_sync">Data &amp; sync</string>
  <string name="pref_title_sync_frequency">Sync frequency</string>

  <!-- Example settings for Data & Sync -->
  <string name="pref_title_system_sync_settings">System sync settings</string>

  <string name="pref_header_notifications">Notifications</string>
  <string name="pref_title_new_message_notifications">New message notifications</string>
  <string name="pref_title_ringtone">Ringtone</string>

  <string name="pref_ringtone_silent">Silent</string>

  <string name="pref_title_vibrate">Vibrate</string>

  <string name="title_activity_login">Sign in</string>

  <string name="prompt_email">Email</string>

  <!-- Example settings for Notifications -->
  <string name="prompt_password">Password (optional)</string>

  <string name="action_sign_in">Sign in or register</string>

  <string name="action_sign_in_short">Sign in</string>
  <string name="error_invalid_email">This email address is invalid</string>

  <string name="error_invalid_password">This password is too short</string>
  <string name="error_incorrect_password">This password is incorrect</string>
  <!-- Strings related to login -->
  <string name="error_field_required">This field is required</string>
  <string name="permission_rationale">"Contacts permissions are needed for providing email
    completions."
  </string>
  <string name="title_input_income">Input Income</string>
  <string name="user_income">Input your income amount.</string>
  <string name="submit">Submit</string>
  <string name="income_input_instruct">Input your income below. The app will complete all calculations after you click submit.</string>
  <string name="title_activity_main">MainActivity</string>
  <string name="title_home">Home</string>
  <string name="title_dashboard">Dashboard</string>
  <string name="title_notifications">Notifications</string>
  <string name="income">Income</string>
  <string name="settings">Settings</string>
  <string name="chart">Chart</string>
  <string name="list">List</string>
  <string name="category">Expenses</string>
  <string name="date_of_income">Date of income</string>
  <string name="rent_mortgage">Rent/Mortgage</string>
  <string name="adding_first_expense">Let\'s start by adding in your first expense.</string>
  <string name="adding_rent">Add your monthly Savings goal. All expenses should be an estimated monthly amount.</string>
  <string name="list_of_income">List of Income</string>
  <string name="see_all_income">See All Income</string>
  <string name="list_of_categories">List of Categories</string>
  <string name="invalid_number">Please input a valid amount.</string>
  <string name="savings">Savings</string>
  <string-array name="pref_example_list_titles">
    <item>Always</item>
    <item>When possible</item>
    <item>Never</item>
  </string-array>
  <string-array name="pref_example_list_values">
    <item>1</item>
    <item>0</item>
    <item>-1</item>
  </string-array>
  <string-array name="pref_sync_frequency_titles">
    <item>15 minutes</item>
    <item>30 minutes</item>
    <item>1 hour</item>
    <item>3 hours</item>
    <item>6 hours</item>
    <item>Never</item>
  </string-array>
  <string-array name="pref_sync_frequency_values">
    <item>15</item>
    <item>30</item>
    <item>60</item>
    <item>180</item>
    <item>360</item>
    <item>-1</item>
  </string-array>
  <string-array name="list_preference_entries">
    <item>Entry 1</item>
    <item>Entry 2</item>
    <item>Entry 3</item>
  </string-array>
  <string-array name="list_preference_entry_values">
    <item>1</item>
    <item>2</item>
    <item>3</item>
  </string-array>
  <string-array name="multi_select_list_preference_default_value"/>
</resources>
