<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  android:fontFamily="@font/cutive"
  >

  <item
    android:id="@+id/navigation_list"
    android:icon="@drawable/navigation_list"
    android:fontFamily="@font/cutive"
    android:title="@string/list"
    />

  <item
    android:id="@+id/navigation_chart"
    android:icon="@drawable/navigation_chart"
    android:fontFamily="@font/cutive"
    android:title="@string/chart"
    />

  <item
    android:id="@+id/menu_info"
    android:fontFamily="@font/cutive"
    android:icon="@drawable/cash_envelope"
    android:title="Info"
    />

  <item
    android:id="@+id/money_sign"
    android:icon="@drawable/money_sign"
    android:fontFamily="@font/cutive"
    android:title="@string/income"
    />

  <item
    android:id="@+id/navigation_settings"
    android:fontFamily="@font/cutive"
    android:icon="@drawable/na_money_sign"
    android:title="@string/category"
    />

</menu>
