<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/coordinatorLayout"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:fitsSystemWindows="true"
  android:fontFamily="@font/cutive"
  tools:context=".fragment.IncomeFragment"
  tools:ignore="MergeRootFrame">

  <Button
    android:id="@+id/submit_income"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/submit"
    android:fontFamily="@font/cutive"
    android:textSize="15sp"
    app:layout_constraintBottom_toTopOf="@id/list_all_income"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/date_input"/>

  <Button
    android:id="@+id/list_all_income"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="40dp"
    android:fontFamily="@font/cutive"
    android:text="See All Income"
    android:textSize="15sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/submit_income"/>

  <EditText
    android:id="@+id/date_input"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:hint="@string/date_of_income"
    android:imeActionId="6"
    android:fontFamily="@font/cutive"
    android:imeOptions="actionUnspecified"
    android:importantForAutofill="no"
    android:inputType="date"
    android:maxLines="1"
    android:textSize="15sp"
    android:singleLine="true"
    app:layout_constraintTop_toBottomOf="@id/user_income"
    app:layout_constraintBottom_toTopOf="@id/submit_income"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"/>

  <EditText
    android:id="@+id/user_income"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:hint="@string/user_income"
    android:imeActionId="6"
    android:imeOptions="actionUnspecified"
    android:inputType="numberDecimal"
    android:maxLines="1"
    android:singleLine="true"
    android:fontFamily="@font/cutive"

    app:layout_constraintBottom_toTopOf="@id/date_input"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/income_instructions"/>

  <TextView
    android:id="@+id/sw_quote"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:textAlignment="center"
    android:fontFamily="@font/cutive"
    android:textColor="@color/black"
    android:textSize="18sp"
    app:layout_constraintBottom_toTopOf="@id/income_instructions"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>

  <TextView
    android:id="@+id/income_instructions"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15sp"
    android:fontFamily="@font/cutive"
    android:text="@string/income_input_instruct"
    android:textAlignment="center"
    android:textSize="18sp"
    app:layout_constraintBottom_toTopOf="@id/user_income"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/sw_quote"
    />

</androidx.constraintlayout.widget.ConstraintLayout>